unpackaged/main/default/objects/CMPL123QMS__CAPA__c/CMPL123QMS__CAPA__c.object-meta.xml
<CustomObject>
    <label>CAPA</label>
    <nameField>
        <displayFormat>CAPA-{00000}</displayFormat>
        <label>CAPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>