unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
        <fullName>Action_Plan__c</fullName>
        <description>Action Plan</description>
        <label>Action Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>