unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CAPA_Closure_Date__c.field-meta.xml
<CustomField>
        <fullName>CAPA_Closure_Date__c</fullName>
        <description>CAPA Closure Date</description>
        <label>CAPA Closure Date</label>
        <type>Date</type>
    </CustomField>