unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CAPA_Owner__c.field-meta.xml
<CustomField>
        <fullName>CAPA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CAPA Owner</description>
        <label>CAPA Plan Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPAsOwner</relationshipName>
        <type>Lookup</type>
    </CustomField>