unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Actions_to_be_Completed__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Actions_to_be_Completed__c</fullName>
        <label>Actions to be Completed</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>