unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Additional_Comments__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>