unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Assessment_of_Risk__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Assessment_of_Risk__c</fullName>
        <label>Assessment of Risk</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>