unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__CAPA_Source__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__CAPA_Source__c</fullName>
        <label>CAPA Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>