unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__CAPA_Title__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__CAPA_Title__c</fullName>
        <label>CAPA Title</label>
        <length>150</length>
        <type>Text</type>
    </CustomField>