unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__CAPA_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__CAPA_Type__c</fullName>
        <label>CAPA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrective Action</fullName>
                </value>
                <value>
                    <fullName>Preventive Action</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>