unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Document_Specification_Changes__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Document_Specification_Changes__c</fullName>
        <label>Document/Specification Changes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>