unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Documentation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Documentation__c</fullName>
        <label>Documentation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>