unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Effectiveness_of_Actions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Effectiveness_of_Actions__c</fullName>
        <label>Effectiveness of Actions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>