unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Employee_Training__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Employee_Training__c</fullName>
        <label>Employee Training</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>