unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Implementation_Due_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Implementation_Due_Date__c</fullName>
        <label>Implementation Due Date</label>
        <type>Date</type>
    </CustomField>