unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Implementation_Summary__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Implementation_Summary__c</fullName>
        <label>Implementation Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>