unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Investigation_Past_Due__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Investigation_Past_Due__c</fullName>
        <description>This value checks on whether the Investigation phase of the CAPA is overdue</description>
        <formula>(CMPL123QMS__Investigation_Due_Date__c  &lt;  CMPL123QMS__Investigation_Completed_Date__c) ||   ((ISBLANK( CMPL123QMS__Investigation_Completed_Date__c )  &amp;&amp; (Today() &gt;  CMPL123QMS__Investigation_Due_Date__c )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Investigation Past Due</label>
        <type>Checkbox</type>
    </CustomField>