unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Investigation_Procedure__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Investigation_Procedure__c</fullName>
        <label>Investigation Procedure</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>