unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Investigation_Start_Date__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Investigation_Start_Date__c</fullName>
        <label>Investigation Start Date</label>
        <type>Date</type>
    </CustomField>