unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Objective_of_Investigation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Objective_of_Investigation__c</fullName>
        <label>Objective of Investigation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>