unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Other_Products_Affected__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Other_Products_Affected__c</fullName>
        <label>Other Products Affected</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>