unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Potential_Impact__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Potential_Impact__c</fullName>
        <label>Potential Impact</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>