unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Product__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </CustomField>