unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Product_Name__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Product_Name__c</fullName>
        <formula>CMPL123QMS__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </CustomField>