unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Remedial_Action_s__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Remedial_Action_s__c</fullName>
        <label>Remedial Action(s)</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>