unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Responsibilities_and_Resources__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Responsibilities_and_Resources__c</fullName>
        <label>Responsibilities and Resources</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>