unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Results_and_Data__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Results_and_Data__c</fullName>
        <label>Results and Data</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>