unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Root_Cause_of_Problem__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Root_Cause_of_Problem__c</fullName>
        <label>Root Cause of Problem</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>