unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Verification_Method__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Verification_Method__c</fullName>
        <label>Verification Method</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>