unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/CMPL123QMS__Verification_of_Results__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Verification_of_Results__c</fullName>
        <label>Verification of Results</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>