unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Date_Initiated__c.field-meta.xml
<CustomField>
        <fullName>Date_Initiated__c</fullName>
        <description>Date Initiated</description>
        <label>Date Initiated</label>
        <type>Date</type>
    </CustomField>