unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Description__c.field-meta.xml
<CustomField>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>