unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Due_Date__c.field-meta.xml
<CustomField>
        <fullName>Due_Date__c</fullName>
        <defaultValue>Today()+30</defaultValue>
        <label>Due Date</label>
        <type>Date</type>
    </CustomField>