unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Effectiveness_Check_Required__c.field-meta.xml
<CustomField>
        <fullName>Effectiveness_Check_Required__c</fullName>
        <label>Effectiveness Check Required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>