unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Effectiveness_created__c.field-meta.xml
<CustomField>
        <fullName>Effectiveness_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Effectiveness created</label>
        <type>Checkbox</type>
    </CustomField>