unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Effectiveness_Owner__c.field-meta.xml
<CustomField>
        <fullName>Effectiveness_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effectiveness Owner</description>
        <label>Effectiveness Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CAPAs (Effectivness Owner)</relationshipLabel>
        <relationshipName>CAPAsEffectiveOwner</relationshipName>
        <type>Lookup</type>
    </CustomField>