unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Effectiveness_Summary__c.field-meta.xml
<CustomField>
        <fullName>Effectiveness_Summary__c</fullName>
        <description>Effectiveness Summary</description>
        <label>Effectiveness Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>