unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
        <fullName>Final_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Final Approver</description>
        <label>Final Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>CAPAs (Final Approver)</relationshipLabel>
        <relationshipName>CAPAsFinalApprover</relationshipName>
        <type>Lookup</type>
    </CustomField>