unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Immediate_Actions__c.field-meta.xml
<CustomField>
        <fullName>Immediate_Actions__c</fullName>
        <description>Immediate Actions</description>
        <label>Immediate Actions</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>