unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Impact_Analysis__c.field-meta.xml
<CustomField>
        <fullName>Impact_Analysis__c</fullName>
        <description>Impact Analysis</description>
        <label>Impact Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>