unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Investigation_Required__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Required__c</fullName>
        <description>Investigation Required?</description>
        <label>Investigation Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>