unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Investigation_Summary__c.field-meta.xml
<CustomField>
        <fullName>Investigation_Summary__c</fullName>
        <description>Investigation Summary</description>
        <label>Investigation Summary</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>