unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Joan_Text__c.field-meta.xml
<CustomField>
        <fullName>Joan_Text__c</fullName>
        <description>Testing relabeling field used by Process Builder</description>
        <label>Joan Text (New Label)</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>