unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Likelihood_of_detection__c.field-meta.xml
<CustomField>
        <fullName>Likelihood_of_detection__c</fullName>
        <description>Likelihood of detection</description>
        <label>Likelihood of detection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>