unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Quality_Event__c.field-meta.xml
<CustomField>
        <fullName>Quality_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Event</label>
        <referenceTo>CMPL123QMS__Deviation__c</referenceTo>
        <relationshipLabel>CAPAs</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </CustomField>