unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>