unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Root_Cause_Summary__c.field-meta.xml
<CustomField>
        <fullName>Root_Cause_Summary__c</fullName>
        <label>Root Cause Summary</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>