unpackaged/main/default/objects/CMPL123QMS__CAPA__c/fields/Severity_of_impact__c.field-meta.xml
<CustomField>
        <fullName>Severity_of_impact__c</fullName>
        <description>Severity of impact.</description>
        <label>Severity of impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>