unpackaged/main/default/objects/CMPL123QMS__CAPA__c/validationRules/fill_all_the_required_fields.validationRule-meta.xml
<ValidationRule>
        <fullName>fill_all_the_required_fields</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( CMPL123_WF_Action__c ) &amp;&amp;  CMPL123_WF_Action__c =="Submit for Review - CAPA" &amp;&amp;  Description__c ==""</errorConditionFormula>
        <errorMessage>Please fill all the required fields before proceeding.</errorMessage>
    </ValidationRule>