unpackaged/main/default/objects/CMPL123QMS__CAPA__c/validationRules/Prevent_Edit_CAPA_when_QE_is_closed.validationRule-meta.xml
<ValidationRule>
        <fullName>Prevent_Edit_CAPA_when_QE_is_closed</fullName>
        <active>false</active>
        <errorConditionFormula>Quality_Event__r.CMPL123_WF_Status__c =="Closed - Quality Event"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </ValidationRule>