unpackaged/main/default/objects/CMPL123QMS__CAPA__c/listViews/CMPL123QMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123QMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__CAPA_Title__c</columns>
        <columns>CMPL123QMS__CAPA_Type__c</columns>
        <columns>CMPL123QMS__Explanation_of_Problem__c</columns>
        <columns>CMPL123QMS__Implementation_Start_Date__c</columns>
        <columns>CMPL123QMS__Investigation_Due_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>