unpackaged/main/default/objects/CMPL123QMS__CAPA__c/listViews/Related_Quality_Events.listView-meta.xml
<ListView>
        <fullName>Related_Quality_Events</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Date_Initiated__c</columns>
        <filterScope>Everything</filterScope>
        <label>Related Quality Events</label>
    </ListView>